--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -2,9 +2,15 @@
 @import "./components/main.scss";
 @import "./components/footer.scss";
 @import "./components/slider.scss";
+@import "./components/menu.scss";
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 * {
   scroll-behavior: smooth;
+  border: 1px solid green;
 }
 
 body {
@@ -20,4 +26,8 @@ body {
 
 html {
   max-width: 100%;
+}
+
+.slick-initialized .slick-slide {
+  display: flex;
 }
