--- a/src/styles/components/menu.scss
+++ b/src/styles/components/menu.scss
@@ -1,10 +1,10 @@
 .menu {
-  @apply flex flex-col w-full bg-black text-[24px] text-white z-50 fixed h-full right-[-100%];
+  @apply flex flex-col w-full sm:w-1/3 bg-black text-[24px] text-white z-50 fixed h-full right-[-100%] sm:rounded-l-xl sm:top-0;
   &__close {
-    @apply ml-auto m-5;
+    @apply ml-auto m-5 cursor-pointer;
   }
   &__main {
-    @apply flex flex-col items-center justify-center;
+    @apply flex flex-col items-center justify-center sm:items-start sm:ml-10;
     &-text {
       @apply my-4;
     }
