--- a/src/styles/components/slider.scss
+++ b/src/styles/components/slider.scss
@@ -14,7 +14,7 @@
 }
 
 .slider__item {
-  @apply bg-black flex flex-col w-1/3 rounded-2xl whitespace-normal;
+  @apply bg-black flex flex-col w-1/3 rounded-2xl whitespace-normal sm:mx-1;
 }
 
 .slider__item-name {
