--- a/src/styles/components/footer.scss
+++ b/src/styles/components/footer.scss
@@ -18,7 +18,7 @@
 
 /* Footer Container */
 .footer {
-  @apply bg-black flex justify-around items-center flex-col sm:flex-row;
+  @apply bg-black flex justify-around items-center flex-col sm:flex-row sm:py-10;
 }
 
 /* Footer Name */
