--- a/src/styles/components/menu.scss
+++ b/src/styles/components/menu.scss
@@ -1,5 +1,5 @@
 .menu {
-  @apply flex flex-col w-full sm:w-1/3 bg-black text-[24px] text-white z-50 fixed h-full right-[-100%] sm:rounded-l-xl sm:top-0;
+  @apply flex flex-col w-full right-[-100%] sm:w-1/3 bg-black text-[24px] text-white fixed h-full sm:rounded-l-xl sm:top-0;
   &__close {
     @apply ml-auto m-5 cursor-pointer;
   }
@@ -21,4 +21,16 @@
   &__line {
     @apply w-full h-[1px] bg-yellow-300;
   }
+}
+
+.modal {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  background: rgba(0, 0, 0, 0.4);
+  top: 0;
+  left: 0;
+  display: none;
+  justify-content: flex-end;
+  z-index: 9999;
 }
