--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -14,6 +14,12 @@ body {
   background-position: top right;
 }
 
+@media (max-width: 480px) {
+  body {
+    background-size: 550px 550px;
+  }
+}
+
 @font-face {
   font-family: "Santello";
   src: url(santello-regular.ttf);
